# byetalent

./: .env.template  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .ruff.toml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  watcher.py
config/: config.template.toml  prod_config.template.toml
src/application/common/: __init__.py
src/application/common/core/: exceptions.py
src/application/department/: exceptions.py
src/application/department/commands/: __init__.py  create_department.py  delete_department.py  update_department.py
src/application/department/dto/: __init__.py  department.py
src/application/department/interfaces/: __init__.py
src/application/department/queries/: __init__.py  get_department_tree.py
src/application/department/use_cases/: __init__.py  create_department.py
src/application/employee/: exceptions.py
src/application/employee/commands/: __init__.py  create_employee.py
src/application/employee/dto/: __init__.py  employee.py
src/application/employee/interfaces/: __init__.py
src/domain/department/: exceptions.py
src/domain/employee/: exceptions.py
src/infrastructure/: config.py  config_loader.py  uow.py
src/infrastructure/di/: __init__.py  ioc.py  proxy.py
src/infrastructure/log/: config.py  event_handler.py  main.py  processors.py
src/presentation/api/: __main__.py  config.py  main.py
tests/integration/: conftest.py  test_stairway.py
tests/mocks/: department_repo.py  uow.py
tests/unit/application/: conftest.py
tests/unit/domain/: test_department.py
(+45 files in other folders)
