[project]
name = "hitalent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adaptix>=3.0.0b12",
    "aiokafka>=0.14.0",
    "alembic>=1.18.4",
    "anyio>=4.13.0",
    "asyncpg>=0.31.0",
    "cloudevents>=2.0.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "msgspec>=0.21.1",
    "orjson>=3.11.9",
    "passlib>=1.7.4",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uuid6>=2025.0.1",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "debugpy>=1.8.20",
    "deptry>=0.25.1",
    "ipython>=9.13.0",
    "memediator>=0.1.0",
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
    "sqlparse>=0.5.5",
    "twine>=6.2.0",
    "vulture>=2.16",
    "watchdog>=6.0.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "testcontainers>=4.14.2",
]
lint = [
    "mypy>=2.1.0",
    "pylint>=4.0.5",
    "pylint-per-file-ignores>=3.2.1",
    "ruff>=0.15.13",
]
